Fix webpage flexboxes not stretching across entire page

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: #1f2937;
     font-family: sans-serif;
+    margin: 0;
+    padding: 0;
 }
 .header {
     display: flex;
